make-a-wish-salesforce/src/objects/cg__SDriveCustomAction__c.object
<CustomObject>
    <fields>
        <fullName>cg__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>It holds wheter the action is active or not?</description>
        <inlineHelpText>It holds wheter the action is active or not?</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cg__Display__c</fullName>
        <description>Select display settings for the action. Hidden: for actions has no any visual interaction. Display: for actions that has visual interactions which opened within an iframe. Redirect: for actions that page is redirected with file Id paramter in Url.</description>
        <inlineHelpText>Select display settings for the action. Hidden: for actions has no any visual interaction. Display: for actions that has visual interactions which opened within an iframe. Redirect: for actions that page is redirected with file Id paramter in Url.</inlineHelpText>
        <label>Display</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hidden</fullName>
                    <default>true</default>
                    <label>Hidden</label>
                </value>
                <value>
                    <fullName>Display</fullName>
                </value>
                <value>
                    <fullName>Redirect</fullName>
                </value>
                <value>
                    <fullName>Lightning Component</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cg__File_Types__c</fullName>
        <description>Write file extensions seperated with comma that action is active for. If it is empty, action will active for all file types. (i.e. jpg,png,gif,Folder,pdf)</description>
        <inlineHelpText>Write file extensions seperated with comma that action is active for. If it is empty, action will active for all file types. (i.e. jpg,png,gif,Folder,pdf)</inlineHelpText>
        <label>File Types</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>cg__Interface_Type__c</fullName>
        <description>Which interface is action for?</description>
        <inlineHelpText>Which interface is action for?</inlineHelpText>
        <label>Interface Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Both</fullName>
                    <default>true</default>
                    <label>Both</label>
                </value>
                <value>
                    <fullName>Lightning</fullName>
                </value>
                <value>
                    <fullName>Classic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cg__Label__c</fullName>
        <description>Action&apos;s label which displayed on menus and toolbar.</description>
        <inlineHelpText>Action&apos;s label which displayed on menus and toolbar.</inlineHelpText>
        <label>Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Multiple__c</fullName>
        <defaultValue>true</defaultValue>
        <description>It defines whether action can be fired for more than one file or not.</description>
        <inlineHelpText>It defines whether action can be fired for more than one file or not.</inlineHelpText>
        <label>Multiple</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cg__Objects__c</fullName>
        <description>Object Names that action is active for. Names should be seperated by comma (i.e. cg__AccountFile__c, My_Custom_Object_File__c) If the field is empty, action is active for all objects.</description>
        <inlineHelpText>Object Names that action is active for. Names should be seperated by comma (i.e. cg__AccountFile__c, My_Custom_Object_File__c) If the field is empty, action is active for all objects.</inlineHelpText>
        <label>Objects</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cg__Url__c</fullName>
        <description>Path of custom action file. For VF Pages it is &quot;/apex/[PageName]&quot;. For Static Resource scripts it is &quot;/resources/[SourceName]/[PageName]&quot;. For Lightning component it is &quot;[OrganizationPrefix]:[ComponentName]&quot; if there is no &quot;OrganizationPrefix&quot; it is &quot;c&quot;. For Redirect URL It is full URL i.e. 
&quot;https://www.mysite.com/mycustomaction&quot;.</description>
        <inlineHelpText>Path of custom action file. For VF Pages it is &quot;/apex/[PageName]&quot;. For Static Resource scripts it is &quot;/resources/[SourceName]/[PageName]&quot;. For Lightning component it is &quot;[OrganizationPrefix]:[ComponentName]&quot; if there is no &quot;OrganizationPrefix&quot; it is &quot;c&quot;.</inlineHelpText>
        <label>Url</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Users__c</fullName>
        <description>Users that action is active for. IDs should be seperated by comma.</description>
        <inlineHelpText>Users that action is active for. IDs should be seperated by comma.</inlineHelpText>
        <label>Users</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>SDriveCustomAction</label>
    <listViews>
        <fullName>cg__All</fullName>
        <columns>NAME</columns>
        <columns>cg__Display__c</columns>
        <columns>cg__File_Types__c</columns>
        <columns>cg__Interface_Type__c</columns>
        <columns>cg__Label__c</columns>
        <columns>cg__Objects__c</columns>
        <columns>cg__Url__c</columns>
        <columns>cg__Users__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SDriveCustomActions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>